# fastapi-htmx-jinja2

./: .gitignore  main.py  pyproject.toml  readme.md  tasks.py  templates.py
fragments/: head.html  index.html  new.html  page.html
