[tool.poetry]
name = "rrdemo"
version = "0.1.0"
description = "RockRabbit demo"
authors = ["Igor Serebryany <igor47@moomers.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
invoke = "^2.2.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
